# docs-as-code

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  LICENSE  MCP_SERVER_TEMPLATE_PLAN.md  README.md  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  template-repository-settings.json
.github/agents/: instructions.md  skills.md
.github/workflows/: ci.yml  docker-image.yml  docker-publish.yml  publish.yml
specs/docs/: implementation-plan.md
src/mcp_server_template/: __init__.py  server.py
tests/: __init__.py  test_prompts.py  test_resources.py  test_tools.py
